KUBERNETES/gateway-api/demo-1/httproute-cors.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
  namespace: default

spec:
  parentRefs:
  - name: gateway-api
    sectionName: http
    kind: Gateway
  - name: gateway-api
    sectionName: https
    kind: Gateway

  hostnames:
  - example-app.com

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/go 
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "http://localhost:8000"
        allowMethods:
        - GET
        - POST
        allowHeaders:
        - Content-Type
        - Authorization
        exposeHeaders:
        - X-Custom-Header
        allowCredentials: true
        maxAge: 3600
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: go-svc
      port: 5000
      weight: 1
